@@ -1842,6 +1842,13 @@ static const AVCodecDescriptor codec_descriptors[] = {
         .long_name = NULL_IF_CONFIG_SMALL("Cintel RAW"),
         .props     = AV_CODEC_PROP_INTRA_ONLY | AV_CODEC_PROP_LOSSY | AV_CODEC_PROP_LOSSLESS,
     },
+    {
+        .id        = AV_CODEC_ID_SIMBIOSIS_IMX,
+        .type      = AVMEDIA_TYPE_VIDEO,
+        .name      = "simbiosis_imx",
+        .long_name = NULL_IF_CONFIG_SMALL("Simbiosis Interactive IMX Video"),
+        .props     = AV_CODEC_PROP_LOSSY,
+    },
 
     /* various PCM "codecs" */
     {
