@@ -305,6 +305,7 @@ enum AVCodecID {
     AV_CODEC_ID_IPU,
     AV_CODEC_ID_ARGO,
     AV_CODEC_ID_CRI,
+    AV_CODEC_ID_SIMBIOSIS_IMX,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
